@@ -2,9 +2,9 @@ package seedu.address.logic.parser;
 
 import static seedu.address.logic.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 import seedu.address.logic.commands.FindCommand;
 import seedu.address.logic.parser.exceptions.ParseException;
@@ -14,6 +14,9 @@ import seedu.address.model.person.ClientContainsKeywordsPredicate;
  * Parses input arguments and creates a new FindCommand object
  */
 public class FindCommandParser implements Parser<FindCommand> {
+    public static final Prefix PREFIX_NAME = new Prefix("n/");
+    public static final Prefix PREFIX_TAG = new Prefix("t/");
+    public static final Prefix PREFIX_DATE = new Prefix("d/");
 
     /**
      * Parses the given {@code String} of arguments in the context of the
@@ -23,22 +26,56 @@ public class FindCommandParser implements Parser<FindCommand> {
      */
     @Override
     public FindCommand parse(String args) throws ParseException {
-        String trimmedArgs = args.trim();
+        assert args != null : "args must not be null";
 
-        // Extract prefix
-        String prefix = extractPrefix(trimmedArgs);
-        String keywordArgs = extractKeywords(trimmedArgs, prefix);
+        ArgumentMultimap argMultimap = ArgumentTokenizer.tokenize(args, PREFIX_NAME, PREFIX_TAG, PREFIX_DATE);
 
-        List<String> keywords;
+        Map<String, List<String>> searchCriteria = new HashMap<>();
 
-        // If keywordArgs is empty or only whitespace, pass empty list
-        if (keywordArgs == null || keywordArgs.trim().isEmpty()) {
-            keywords = Collections.emptyList();
-        } else {
-            keywords = Arrays.asList(keywordArgs.trim().split("\\s+"));
+        // === NAME ===
+        // FIX: Replaced argMultimap.getAllValues(...) with
+        // getValue().map(List::of).orElse(List.of())
+        // to retrieve the single value correctly when Prefix.equals() is
+        // broken.
+        List<String> allNames = argMultimap.getValue(PREFIX_NAME).map(String::trim).map(List::of).orElse(List.of());
+
+        // If the user typed n/ with no actual value, treat as wildcard -> match
+        // all persons
+        boolean nameWildcard = allNames.stream().anyMatch(String::isEmpty);
+        if (nameWildcard) {
+            searchCriteria.put("name", List.of()); // empty list means wildcard
+        } else if (!allNames.isEmpty()) {
+            searchCriteria.put("name", allNames.stream().distinct().toList());
         }
 
-        return createFindCommand(prefix, keywords);
+        // === TAG ===
+        // FIX: Same change applied here.
+        List<String> allTags = argMultimap.getValue(PREFIX_TAG).map(String::trim).map(List::of).orElse(List.of());
+
+        boolean tagWildcard = allTags.stream().anyMatch(String::isEmpty);
+        if (tagWildcard) {
+            searchCriteria.put("tag", List.of());
+        } else if (!allTags.isEmpty()) {
+            searchCriteria.put("tag", allTags.stream().distinct().toList());
+        }
+
+        // === DATE ===
+        // FIX: Same change applied here.
+        List<String> allDates = argMultimap.getValue(PREFIX_DATE).map(String::trim).map(List::of).orElse(List.of());
+
+        boolean dateWildcard = allDates.stream().anyMatch(String::isEmpty);
+        if (dateWildcard) {
+            searchCriteria.put("date", List.of());
+        } else if (!allDates.isEmpty()) {
+            searchCriteria.put("date", allDates.stream().distinct().toList());
+        }
+
+        // If user didn't provide any prefixes at all (like plain "find")
+        if (searchCriteria.isEmpty()) {
+            throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+        }
+
+        return new FindCommand(new ClientContainsKeywordsPredicate(searchCriteria));
     }
 
     /**
@@ -86,21 +123,8 @@ public class FindCommandParser implements Parser<FindCommand> {
      * @return A FindCommand with the appropriate predicate.
      * @throws ParseException if the prefix is invalid.
      */
-    private FindCommand createFindCommand(String prefix, List<String> keywords) throws ParseException {
-        switch (prefix) {
-        case "n/":
-            return new FindCommand(new ClientContainsKeywordsPredicate(ClientContainsKeywordsPredicate.SearchType.NAME,
-                                            keywords));
-        case "t/":
-            return new FindCommand(new ClientContainsKeywordsPredicate(ClientContainsKeywordsPredicate.SearchType.TAG,
-                                            keywords));
-        case "d/":
-            return new FindCommand(new ClientContainsKeywordsPredicate(ClientContainsKeywordsPredicate.SearchType.DATE,
-                                            keywords));
-        default:
-            throw new ParseException(
-                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE.toString()));
-        }
+    private FindCommand createFindCommand(Map<String, List<String>> searchCriteria) {
+        return new FindCommand(new ClientContainsKeywordsPredicate(searchCriteria));
     }
 
 }
